Bloque HTML para visualizar el contador de movimientos y el tiempo transcurrido del juego hasta ganar o reiniciar el mismo.

--- a/ejercicio4/memory.html
+++ b/ejercicio4/memory.html
@@ -21,6 +21,20 @@
                 <button id="restart-button" class="button is-primary">
                     Reiniciar Juego
                 </button>
+                <div class="level">
+                    <div class="level-item has-text-centered">
+                        <div>
+                            <p class="heading">Movimientos</p>
+                            <p id="move-counter" class="title">0</p>
+                        </div>
+                    </div>
+                    <div class="level-item has-text-centered">
+                        <div>
+                            <p class="heading">Tiempo</p>
+                            <p id="timer" class="title">0s</p>
+                        </div>
+                    </div>
+                </div>
                 <div class="fixed-grid has-4-cols">
                     <div id="game-board" class="grid"></div>
                 </div>
